--- a/templates/charity/my_help_list.html
+++ b/templates/charity/my_help_list.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 
 {% block content %}
-    <h1>Help List</h1>
+    <h1>My Help List</h1>
     <a type="button" class="btn btn-success" href="{% url 'charity:help_create' %}">
     Create
     </a>
