--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Wecome to index.html</title>
-    {% block navbar %}
-    {% endblock navbar %}
+{% load static %}
+{% block css %}
+    <link href="{% static 'css/bootstrap.min.css'%}" id="bootstrap-style" rel="stylesheet" type="text/css" />
+{% endblock css %}
+    
+{% block navbar %}
+    {% include "includes/navigation.html" %}
+{% endblock navbar %}
 </head>
 <body>
+<div class="m-5">
     {% block content %}
         
     {% endblock content %}
+</div>
 </body>
 </html>
